--- a/src/ifs.tex
+++ b/src/ifs.tex
@@ -28,5 +28,9 @@
 \g@newif\ifexb@CountIntros
 \g@newif\ifexb@noheadArg
 \g@newif\ifexb@showtags
+\g@newif\ifexb@showCurrent@PPHeader
+\g@newif\ifexb@showLonelyPartProblems
+\global\exb@showLonelyPartProblemsfalse
+\global\exb@showCurrent@PPHeadertrue
 \exb@b@nextprob@headerfalse
 \exbank@if@needspacetrue
