YET another release

--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -85,6 +85,8 @@
     \change{Adjusted margins.}
     \change{Activated \dac\ppMarginAbove (it now does something)}
     \change{Added \dac\exercisebankversion and \dac\exercisebankbuild}
+    \change{Part problem header now showing if only one part problem is displayed}
+    \change{Possibility to toggle whether part problem header showing if only one part problem is displayed \refKey{show lonely part problems}}
     % \change{Removed docs for \orderedselect since it's not implemented yet}
 \chlogtable
 
