--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -88,9 +88,11 @@
     \change{Part problem header now showing if only one part problem is displayed}
     \change{Possibility to toggle whether part problem header showing if only one part problem is displayed \refKey{show lonely part problems}}
     % \change{Removed docs for \orderedselect since it's not implemented yet}
+    \change{Fixed TeX capacity exceeded error for long exercises.}
 \chlogtable
 
 
 % Testers and thanks
-\thankyous{\gh{thorstengrothe}}
-\tester{\gh{tristelune1}}
+\tester{\gh{thorstengrothe}}
+\onethankyou{\gh{tristelune1}}
+% \thankyou{}
